neutron (2:7.0.5~dev99-0ubuntu1) UNRELEASED; urgency=medium

  [ James Page ]
  * New upstream version.
  * d/p/*: Refresh.

  [ Corey Bryant ]
  * d/p/fix-test-treat-devices-added-updated-no-local-interface.patch:
    Mock ip_lib for failing test.

 -- Corey Bryant <corey.bryant@canonical.com>  Thu, 19 May 2016 12:39:02 -0400

neutron (2:7.0.4-0ubuntu1) wily; urgency=medium

  * New upstream point release for OpenStack Liberty (LP: #1569502).

 -- David Della Vecchia <ddv@canonical.com>  Tue, 12 Apr 2016 14:17:33 -0400

neutron (2:7.0.3-0ubuntu1) wily; urgency=medium

  * New upstream point release (LP: #1544568):
    - Ensure that tunnels are fully reset on ovs restart (LP: #1460164).
    - d/p/iproute2-compat.patch: Drop, included upstream.

 -- James Page <james.page@ubuntu.com>  Thu, 11 Feb 2016 17:07:16 +0000

neutron (2:7.0.1-0ubuntu1) wily; urgency=medium

  [ Corey Bryant ]
  * d/tests/neutron-agents: Give daemon 5 seconds to start to prevent race.

  [ James Page ]
  * New upstream point release (LP: #1530913).

 -- James Page <james.page@ubuntu.com>  Thu, 07 Jan 2016 12:03:11 +0000

neutron (2:7.0.0-0ubuntu1) wily; urgency=medium

  * New upstream release for OpenStack Liberty.

 -- Corey Bryant <corey.bryant@canonical.com>  Thu, 15 Oct 2015 16:38:37 -0400

neutron (2:7.0.0~rc3-0ubuntu1) wily; urgency=medium

  * New upstream release candidate for OpenStack Liberty.
  * d/control: Align dependencies with upstream.

 -- Corey Bryant <corey.bryant@canonical.com>  Wed, 14 Oct 2015 11:49:29 -0400

neutron (2:7.0.0~rc2-0ubuntu2) wily; urgency=medium

  * d/control: Drop neutron-plugin-metaplugin and neutron-plugin-cisco
    binary packages as upstream has moved the core plugins out of tree.
  * d/tests/cisco-plugin: Dropped since plugin is moved out of tree.

 -- Corey Bryant <corey.bryant@canonical.com>  Fri, 09 Oct 2015 09:38:10 -0400

neutron (2:7.0.0~rc2-0ubuntu1) wily; urgency=medium

  * New upstream release candidate for OpenStack Liberty.