@@ -7,6 +7,7 @@ neutron (2:7.0.5~dev99-0ubuntu1) UNRELEASED; urgency=medium
   [ Corey Bryant ]
   * d/p/fix-test-treat-devices-added-updated-no-local-interface.patch:
     Mock ip_lib for failing test.
+  * d/rules: Use ostestr to run tests.
 
  -- Corey Bryant <corey.bryant@canonical.com>  Thu, 19 May 2016 12:39:02 -0400
 
